# unhuman-clips

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  check_status.py  commit_msg.txt  cookies.txt  direct_run.py  fix_compositor.py  fix_compositor2.py  get_narration_timing.py  inspect_narr.py  long_test.py  measure_audio.py  monitor_test.py  poll_now.py  poll_test.py  pyproject.toml  start.bat  start.sh  test_api.py  test_now.py  test_pipeline.py  tmp_analyzer_full.patch  tmp_analyzer_llm.patch  tmp_analyzer_prompt.patch  tmp_analyzer_prompt_full.patch  tmp_clip_rms.txt  tmp_fetch_jobs.py  tmp_mixed_rms.txt  tmp_poll_job.py  tmp_poll_test.py  tmp_prompt.patch  tmp_run_job.py  tmp_test_clients.py  verify_e2e.py  verify_final.py  verify_ocr.py
backend/: .gitignore  config.py  ffmpeg_utils.py  logging_config.py  main.py  models.py  output_manager.py  progress.py  queue_manager.py  requirements.txt  test_llm_only.py
config/: models.yaml
docs/: API.md  CONFIG.md
logs/: direct_run_report.json
scripts/: check_job.py  check_status.py  monitor_job.py  poll_job.py  poll_test.py  run_test.py  smoke_test.py  tmp_create_job.py  tmp_poll_job_live.py  tmp_poll_test.py  tmp_run_job.py  tmp_test_caption_escape.py  tmp_test_cookies.py  tmp_test_reel_plan.py  wait_then_run.py
tests/: conftest.py  test_analyzer.py  test_captioner.py  test_clipper.py  test_compositor.py  test_downloader.py  test_narration_validator.py  test_orchestrator.py  test_output_manager.py  test_pipeline_integration.py  test_plan_validator.py  test_sanitize.py  test_timeline_builder.py
(+36 files in other folders)
